Tasks to templates, plus functions to create and remove them. However, created tasks have a 0-height description and unusable status dropdown.

--- a/workboard-frontend/workboard-semantic.css
+++ b/workboard-frontend/workboard-semantic.css
@@ -41,6 +41,11 @@
   color: #16ab39 !important;
 }
 
+.templates
+{
+  display: none;
+}
+
 .ui.message .list:not(.ui) li:before
 {
   content: '•';
